<resources>
    <string name="app_name">khadamat</string>
    <string name="Welcome">Welcome</string>
    <string name="To">To</string>
    <string name="Search">Search</string>
    <string name="Home">Home</string>
    <string name="Avatar">avatar</string>
    <string name="createservice">CreateService</string>
    <string name="step_2"><u>Step 2</u></string>
    <string name="description_du_service">Description du service</string>
    <string name="telephone">Telephone</string>
    <string name="create">Create your service</string>
    <string name="img_desc_service">image qui decrit le service</string>
    <string name="img_desc_avatar">image qui decrit le avatar</string>
    <string name="service">service</string>
    <string name="more">more</string>
    <string name="logo">logo</string>
    <string name="prestataire">prestataire</string>
    <string name="nom_de_service">Nom de Service</string>
    <string name="description">Description :</string>
    <string name="total_price">Prix Total :</string>
    <string name="prix">200$</string>
    <string name="contacter">contacter</string>
    <string name="show_detail">Plus de Detail</string>
    <string-array name="Villes">
        <item>Marrakech</item>
        <item>CasaBlanca</item>
        <item>Rabat</item>
        <item>Tetouan</item>
        <item>Rabat</item>
        <item>Fes</item>
    </string-array>
    <string-array name="Services">
        <item>reparation</item>
        <item>livraison</item>
        <item>vente</item>
    </string-array>
    <string name="Description">To search for services connect to client\nTo make your service connect to service</string>
    <string name="welcome_to_our_app">Welcome to our app</string>
    <string name="Service">Service</string>
    <string name="client">Client</string>
    <string name="register">REGISTER</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="invalid_username" />
    <string name="invalid_password" />
    <string name="login_failed" />
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm your Password</string>
    <string name="next">Next</string>
    <string name="step_1"><u>Step 1</u></string>
    <string name="city">city</string>
    <string name="cityName">Rabat</string>
    <string name="email">email</string>
    <string name="emailValue">electricien@gmail.com</string>
    <string name="phone">phone</string>
    <string name="phoneValue">+212600000000</string>
    <string name="serviceName">service name</string>
    <string name="servicee">electricien</string>
    <string name="descriptionOfService">description of service</string>
    <string name="descriptionn">
        The electrician carries out the installation and maintenance of electrical systems,
        whether in companies or in private homes.
    </string>
    <string name="user_name">VICTOR NUCULICI</string>
    <string name="Prix">prix</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="Email">Email</string>
    <string name="logout">logout</string>
    <string name="settings">settings</string>
    <string name="profession">electricien</string>
    <string name="save">Save</string>
    
    <string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
</resources>