<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="68dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="26dp"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileImg"
                style="@style/StyleProfileImage"
                app:shapeAppearanceOverlay="@style/Circular"
                app:strokeColor="@android:color/holo_blue_light"
                app:strokeWidth="5dp" />

            <ImageButton
                android:id="@+id/takePic"
                style="@style/StyleCameraIcon"
                app:srcCompat="@android:drawable/ic_menu_camera" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/ll_margin_top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                style="@style/StyleUserName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profession_stngs"
                style="@style/StyleProfession" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView17"
                style="@style/StyleTitles"
                android:text="full name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editable_name"
                    style="@style/StylePlainText"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="VICTOR NUCULICI" />

                <TextView
                    android:id="@+id/full_name"
                    style="@style/StyleSettingsValues"
                    android:text="VICTOR NUCULICI" />

                <TextView
                    android:id="@+id/edit_name"
                    style="@style/StyleEdit"
                    android:text="Edit" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                style="@style/StyleTitles"
                android:text="@string/city" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editable_city"
                    style="@style/StylePlainText"
                    android:ems="10"
                    android:inputType="textPersonName"

                    android:text="@string/cityName" />

                <TextView
                    android:id="@+id/city"
                    style="@style/StyleSettingsValues"
                    android:text="@string/cityName" />

                <TextView
                    android:id="@+id/edit_city"
                    style="@style/StyleEdit" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                style="@style/StyleTitles"
                android:text="@string/phone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editable_phone"
                    style="@style/StylePlainText"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/phoneValue" />

                <TextView
                    android:id="@+id/phone"
                    style="@style/StyleSettingsValues"
                    android:layout_height="match_parent"
                    android:text="@string/phoneValue" />

                <TextView
                    android:id="@+id/edit_phone"
                    style="@style/StyleEdit" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                style="@style/StyleTitles"
                android:text="email" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editable_email"
                    style="@style/StylePlainText"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/emailValue" />

                <TextView
                    android:id="@+id/email"
                    style="@style/StyleSettingsValues"
                    android:text="@string/emailValue" />

                <TextView
                    android:id="@+id/edit_email"
                    style="@style/StyleEdit" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                style="@style/StyleTitles"
                android:text="@string/serviceName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editable_profession"
                    style="@style/StylePlainText"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/profession" />

                <TextView
                    android:id="@+id/profession"
                    style="@style/StyleSettingsValues"
                    android:text="@string/profession" />

                <TextView
                    android:id="@+id/edit_profession"
                    style="@style/StyleEdit" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView12"
                style="@style/StyleTitles"
                android:layout_height="31dp"
                android:text="@string/descriptionOfService" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editable_description"
                    style="@style/StylePlainText"
                    android:layout_height="87dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:paddingRight="40dp"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/description"
                    style="@style/StyleSettingsValues"

                    android:text="description" />

                <TextView
                    android:id="@+id/edit_description"
                    style="@style/StyleEdit"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/button"
                    style="@style/StyleSaveButton"
                    android:background="@drawable/save_button_shape"
                    app:backgroundTint="@color/save_button_color"
                    />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>